# zclaw

./: CLAUDE.md  README.md  install.sh
.github/workflows/: firmware-size-guard.yml  firmware-target-matrix.yml
boards/generic_esp32c3/: board.conf  sdkconfig.board
boards/generic_esp32c6/: board.conf  sdkconfig.board
boards/generic_esp32s3/: board.conf  sdkconfig.board
boards/xiao_esp32s3_sense/: board.conf  partitions_8mb.csv  sdkconfig.board
docs-site/: README.html  getting-started.html  tools.html
main/: CMakeLists.txt  Kconfig.projbuild  agent.c  camera.c  camera.h  config.h  idf_component.yml  json_util.c  llm.c  main.c  mic.c  mic.h  tools.c  tools_handlers.h  tools_media.c  tools_media.h
scripts/: build.sh  check-binary-size.sh  test.sh  web-relay.sh
test/host/: test_agent.c  test_runner.c  test_tools_media.c
